Adds home and style

--- a/home.html
+++ b/home.html
@@ -5,7 +5,50 @@
         <title>USAFA Textbook Exchange</title>
         <link rel="stylesheet" href="style.css">
     </head>
-    <header>
-        <h1>USAFA <span>TEXTBOOK</span> EXCHANGE</h1>
-    </header>
+    <div id = "webpage">
+        <div id = "backdrop">
+            <h1>
+                USAFA <span class = "offcolor"> Textbooks</span>
+            </h1>
+            <h3>Forget the bookshop</h3>
+        </div>
+        <div  id = "navigation">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="buy.html">Buy</a>
+                    </li>
+                    <li>
+                        <a href="sell.html">Sell</a>
+                    </li>
+                    <li>
+                        <a href="account.html">Account</a>
+                    </li>
+                    <li>
+                        <a href="checkout.html">Checkout</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div id="content">
+            <h2>Welcome to the USAFA Texbook Exchange!</h2>
+            <p>This project is a cadet innitiative to help others save money and reduce waste in the cadet wing.</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Buy</h3>
+            <p>In the buy tab, you can browse for various textbooks being sold by other cadets. You can view books based on class, subject, price, and dorm location</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Sell</h3>
+            <p>In the sell tab, you can list your used textbooks for sale. You can determine your own price and choose how you would like to be contacted.</p>
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+            <h3>Account</h3>
+            <p>In the account tab, you can edit your account information including contact and lcocation information</p>
+
+        </div>
+    </div>
 </html>
