Finishes buy and sell

--- a/buy.html
+++ b/buy.html
@@ -34,6 +34,27 @@
             </nav>
         </div>
         <div id="content">
+            <div id="sortby">
+                <label for="sortby">Sort By: </label>
+                <select name="sortby" id="sortby">
+                    <option value="az">Alphabetical by Title</option>
+                    <option value="auth">Alphabetical by Author</option>
+                    <option value="cid">Alphabetical by Class ID</option>
+                    <option value="pricehl">Price (Low to High)</option>
+                </select>
+            </div>
+            <p>&nbsp;</p>
+            <div id="location">
+                <label for="location">Dorm Location: </label>
+                <select name="location" id="location">
+                    <option value="any">Anywhere</option>
+                    <option value="vandy">Vandenberg Hall</option>
+                    <option value="sijan">Sijan Hall</option>
+                   
+                </select>
+            </div>
+            <p>&nbsp;</p>
+            <h2>Listings Available:</h2>
 
         </div>
     </div>
