--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
             <h1>
                 USAFA <span class = "offcolor"> Textbooks</span>
             </h1>
-            <h3>Forget the bookshop</h3>
+            <h3>"Forget the bookshop"</h3>
         </div>
         <div  id = "navigation">
             <nav>
