--- a/checkout.html
+++ b/checkout.html
@@ -34,7 +34,14 @@
             </nav>
         </div>
         <div id="content">
-
+            <div class="CartContainer">
+                <div class="Header">
+                    <h3 class="Heading">Shopping Cart</h3>
+                    <h5 class="Action">Remove all</h5>
+                </div>
+            </div>
+            <button class="button">Checkout</button></div>
+       </div>
         </div>
     </div>
 </html>
