--- a/checkout.html
+++ b/checkout.html
@@ -19,7 +19,7 @@
                         <a href="home.html">Home</a>
                     </li>
                     <li>
-                        <a href="buy.html">Buy</a>
+                        <a href="buy0.php">Buy</a>
                     </li>
                     <li>
                         <a href="sell.html">Sell</a>
