--- a/checkout.html
+++ b/checkout.html
@@ -22,7 +22,7 @@
                         <a href="buy0.php">Buy</a>
                     </li>
                     <li>
-                        <a href="sell.html">Sell</a>
+                        <a href="sell.php">Sell</a>
                     </li>
                     <li>
                         <a href="account.html">Account</a>
